--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   </head>
  
   <body>
-    Hello World
+    <div>
+        <img src="images/Nohan Pradipta.jpg" alt="profile image" />
+        <h2>Nohan Pradipta</h2>
+     </div>
   </body>
  
 </html>
