Added ids for each profile element

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   </head>
  
   <body>
-    <div>
-        <img src="images/Nohan Pradipta.jpg" alt="profile image" />
-        <h2>Nohan Pradipta</h2>
+    <div id="profile-container">
+        <img id="profile-image" src="images/Nohan Pradipta.jpg" alt="profile image" />
+        <h2 id="profile-name">Nohan Pradipta</h2>
      </div>
   </body>
  
