added new div as footer container with id = footer

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
     <link rel="stylesheet" href="style.css">
   </head>
- 
   <body>
     <div id="profile-container">
         <img id="profile-image" src="images/Nohan Pradipta.jpg" alt="profile image" />
         <h2 id="profile-name">Nohan Pradipta</h2>
      </div>
+     <div id="footer">Footer</div>
   </body>
- 
 </html>
